azurermps/1.7.0/AzureRM.Sql/index.md
---
Module Name: AzureRM.Sql
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Locale: en-US
updated_at: 05/01/2017 21:05 PM
ms.date: 05/01/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/sdw-version-test/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v1.0.12/AzureRM.Sql.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/sdw-version-test/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v1.0.12/AzureRM.Sql.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/0589fbf53d27e39e0cf445261d29c64fb0859d62
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: true
ms.service: sql-database
Get-AzureRmSqlCapability: SQL
Get-AzureRmSqlDatabase: SQL
Get-AzureRmSqlDatabaseActivity: SQL
Get-AzureRmSqlDatabaseAuditingPolicy: SQL
Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy: SQL
Get-AzureRmSqlDatabaseDataMaskingPolicy: SQL
Get-AzureRmSqlDatabaseDataMaskingRule: SQL
Get-AzureRmSqlDatabaseExpanded: SQL
Get-AzureRMSqlDatabaseGeoBackup: SQL
Get-AzureRmSqlDatabaseImportExportStatus: SQL
Get-AzureRmSqlDatabaseIndexRecommendations: SQL
Get-AzureRmSqlDatabaseReplicationLink: SQL
Get-AzureRmSqlDatabaseRestorePoints: SQL
Get-AzureRmSqlDatabaseSecureConnectionPolicy: SQL
Get-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Get-AzureRmSqlDatabaseTransparentDataEncryption: SQL
Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity: SQL
Get-AzureRmSqlDatabaseUpgradeHint: SQL
Get-AzureRMSqlDeletedDatabaseBackup: SQL
Get-AzureRmSqlElasticPool: SQL
Get-AzureRmSqlElasticPoolActivity: SQL
Get-AzureRmSqlElasticPoolDatabase: SQL
Get-AzureRmSqlElasticPoolRecommendation: SQL
Get-AzureRmSqlServer: SQL
Get-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Get-AzureRmSqlServerAuditingPolicy: SQL
Get-AzureRmSqlServerBackupLongTermRetentionVault: SQL
Get-AzureRmSqlServerCommunicationLink: SQL
Get-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity: SQL
Get-AzureRmSqlServerFirewallRule: SQL
Get-AzureRmSqlServerServiceObjective: SQL
Get-AzureRmSqlServerUpgrade: SQL
Get-AzureRmSqlServerUpgradeHint: SQL
New-AzureRmSqlDatabase: SQL
New-AzureRmSqlDatabaseCopy: SQL
New-AzureRmSqlDatabaseDataMaskingRule: SQL
New-AzureRmSqlDatabaseExport: SQL
New-AzureRmSqlDatabaseImport: SQL
New-AzureRmSqlDatabaseSecondary: SQL
New-AzureRmSqlElasticPool: SQL
New-AzureRmSqlServer: SQL
New-AzureRmSqlServerCommunicationLink: SQL
New-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
New-AzureRmSqlServerFirewallRule: SQL
Remove-AzureRmSqlDatabase: SQL
Remove-AzureRmSqlDatabaseAuditing: SQL
Remove-AzureRmSqlDatabaseDataMaskingRule: SQL
Remove-AzureRmSqlDatabaseSecondary: SQL
Remove-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Remove-AzureRmSqlElasticPool: SQL
Remove-AzureRmSqlServer: SQL
Remove-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Remove-AzureRmSqlServerAuditing: SQL
Remove-AzureRmSqlServerCommunicationLink: SQL
Remove-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Remove-AzureRmSqlServerFirewallRule: SQL
Restore-AzureRmSqlDatabase: SQL
Resume-AzureRmSqlDatabase: SQL
Set-AzureRmSqlDatabase: SQL
Set-AzureRmSqlDatabaseAuditingPolicy: SQL
Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy: SQL
Set-AzureRmSqlDatabaseDataMaskingPolicy: SQL
Set-AzureRmSqlDatabaseDataMaskingRule: SQL
Set-AzureRmSqlDatabaseSecondary: SQL
Set-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Set-AzureRmSqlDatabaseTransparentDataEncryption: SQL
Set-AzureRmSqlElasticPool: SQL
Set-AzureRmSqlServer: SQL
Set-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Set-AzureRmSqlServerAuditingPolicy: SQL
Set-AzureRmSqlServerBackupLongTermRetentionVault: SQL
Set-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Set-AzureRmSqlServerFirewallRule: SQL
Start-AzureRmSqlDatabaseExecuteIndexRecommendation: SQL
Start-AzureRmSqlServerUpgrade: SQL
Stop-AzureRmSqlDatabaseExecuteIndexRecommendation: SQL
Stop-AzureRmSqlServerUpgrade: SQL
Suspend-AzureRmSqlDatabase: SQL
Use-AzureRmSqlServerAuditingPolicy: SQL
_isModulePage: true
---

# AzureRM.Sql Module
## Description
This topic displays help topics for the Azure SQL Database Cmdlets.

## AzureRM.Sql Cmdlets
### [Get-AzureRmSqlCapability](Get-AzureRmSqlCapability.md)
Gets SQL Database capabilities for the current subscription.

### [Get-AzureRmSqlDatabase](Get-AzureRmSqlDatabase.md)
Gets one or more databases.

### [Get-AzureRmSqlDatabaseActivity](Get-AzureRmSqlDatabaseActivity.md)
Gets the status of moving elastic databases.

### [Get-AzureRmSqlDatabaseAuditingPolicy](Get-AzureRmSqlDatabaseAuditingPolicy.md)
Gets the auditing policy of a database.

### [Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Gets a database long term retention policy.

### [Get-AzureRmSqlDatabaseDataMaskingPolicy](Get-AzureRmSqlDatabaseDataMaskingPolicy.md)
Gets the data masking policy for a database.

### [Get-AzureRmSqlDatabaseDataMaskingRule](Get-AzureRmSqlDatabaseDataMaskingRule.md)
Gets the data masking rules from a database.

### [Get-AzureRmSqlDatabaseExpanded](Get-AzureRmSqlDatabaseExpanded.md)
Gets a database and its expanded property values.

### [Get-AzureRmSqlDatabaseGeoBackup](Get-AzureRmSqlDatabaseGeoBackup.md)
Gets a geo-redundant backup of a database.

### [Get-AzureRmSqlDatabaseImportExportStatus](Get-AzureRmSqlDatabaseImportExportStatus.md)
Gets the details of an import or export of an Azure SQL Database.

### [Get-AzureRmSqlDatabaseIndexRecommendations](Get-AzureRmSqlDatabaseIndexRecommendations.md)
Gets the recommended index operations for a server or database.

### [Get-AzureRmSqlDatabaseReplicationLink](Get-AzureRmSqlDatabaseReplicationLink.md)
Gets the geo-replication links between an Azure SQL Database and a resource group or SQL Server.

### [Get-AzureRmSqlDatabaseRestorePoints](Get-AzureRmSqlDatabaseRestorePoints.md)
Gets the distinct restore points from which a SQL Data Warehouse can be restored.

### [Get-AzureRmSqlDatabaseSecureConnectionPolicy](Get-AzureRmSqlDatabaseSecureConnectionPolicy.md)
Gets the secure connection policy for a database.

### [Get-AzureRmSqlDatabaseThreatDetectionPolicy](Get-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Gets the threat detection policy for a database.

### [Get-AzureRmSqlDatabaseTransparentDataEncryption](Get-AzureRmSqlDatabaseTransparentDataEncryption.md)
Gets the TDE state for a database.

### [Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity](Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity.md)
Gets the progress of a TDE scan of a database.

### [Get-AzureRmSqlDatabaseUpgradeHint](Get-AzureRmSqlDatabaseUpgradeHint.md)
Gets pricing tier hints for a database.

### [Get-AzureRmSqlDeletedDatabaseBackup](Get-AzureRmSqlDeletedDatabaseBackup.md)
Gets a deleted database that you can restore.

### [Get-AzureRmSqlElasticPool](Get-AzureRmSqlElasticPool.md)
Gets elastic pools and their property values in an Azure SQL Database.

### [Get-AzureRmSqlElasticPoolActivity](Get-AzureRmSqlElasticPoolActivity.md)
Gets the status of operations on an elastic pool.

### [Get-AzureRmSqlElasticPoolDatabase](Get-AzureRmSqlElasticPoolDatabase.md)
Gets elastic databases in an elastic pool and their property values.

### [Get-AzureRmSqlElasticPoolRecommendation](Get-AzureRmSqlElasticPoolRecommendation.md)
Gets elastic pool recommendations.

### [Get-AzureRmSqlServer](Get-AzureRmSqlServer.md)
Returns information about SQL Database servers.

### [Get-AzureRmSqlServerActiveDirectoryAdministrator](Get-AzureRmSqlServerActiveDirectoryAdministrator.md)
Gets information about an Azure AD administrator for SQL Server.

### [Get-AzureRmSqlServerAuditingPolicy](Get-AzureRmSqlServerAuditingPolicy.md)
Gets the auditing policy of a SQL server.

### [Get-AzureRmSqlServerBackupLongTermRetentionVault](Get-AzureRmSqlServerBackupLongTermRetentionVault.md)
Gets a server long term retention vault.

### [Get-AzureRmSqlServerCommunicationLink](Get-AzureRmSqlServerCommunicationLink.md)
Gets communication links for elastic database transactions between database servers.

### [Get-AzureRmSqlServerDisasterRecoveryConfiguration](Get-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Gets a database server system recovery configuration.

### [Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity](Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity.md)
Gets activity for a database server system recovery configuration.

### [Get-AzureRmSqlServerFirewallRule](Get-AzureRmSqlServerFirewallRule.md)
Gets firewall rules for a SQL Database server.

### [Get-AzureRmSqlServerServiceObjective](Get-AzureRmSqlServerServiceObjective.md)
Gets service objectives for an Azure SQL Database server.

### [Get-AzureRmSqlServerUpgrade](Get-AzureRmSqlServerUpgrade.md)
Gets the status of an Azure SQL Database server upgrade.

### [Get-AzureRmSqlServerUpgradeHint](Get-AzureRmSqlServerUpgradeHint.md)
Gets pricing tier hints for upgrading an Azure SQL Database server.

### [New-AzureRmSqlDatabase](New-AzureRmSqlDatabase.md)
Creates a database or an elastic database.

### [New-AzureRmSqlDatabaseCopy](New-AzureRmSqlDatabaseCopy.md)
Creates a copy of a SQL Database that uses the snapshot at the current time.

### [New-AzureRmSqlDatabaseDataMaskingRule](New-AzureRmSqlDatabaseDataMaskingRule.md)
Creates a data masking rule for a database.

### [New-AzureRmSqlDatabaseExport](New-AzureRmSqlDatabaseExport.md)
Exports an Azure SQL Database as a .bacpac file to a storage account.

### [New-AzureRmSqlDatabaseImport](New-AzureRmSqlDatabaseImport.md)
Imports a .bacpac file and create a new database on the server.

### [New-AzureRmSqlDatabaseSecondary](New-AzureRmSqlDatabaseSecondary.md)
Creates a secondary database for an existing database and starts data replication.

### [New-AzureRmSqlElasticPool](New-AzureRmSqlElasticPool.md)
Creates an elastic database pool for a SQL Database.

### [New-AzureRmSqlServer](New-AzureRmSqlServer.md)
Creates a SQL Database server.

### [New-AzureRmSqlServerCommunicationLink](New-AzureRmSqlServerCommunicationLink.md)
Creates a communication link for elastic database transactions between two SQL Database servers.

### [New-AzureRmSqlServerDisasterRecoveryConfiguration](New-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Creates a database server system recovery configuration.

### [New-AzureRmSqlServerFirewallRule](New-AzureRmSqlServerFirewallRule.md)
Creates a firewall rule for a SQL Database server.

### [Remove-AzureRmSqlDatabase](Remove-AzureRmSqlDatabase.md)
Removes an Azure SQL database.

### [Remove-AzureRmSqlDatabaseAuditing](Remove-AzureRmSqlDatabaseAuditing.md)
Removes the auditing of a database.

### [Remove-AzureRmSqlDatabaseDataMaskingRule](Remove-AzureRmSqlDatabaseDataMaskingRule.md)
Removes a data masking rule from a database.

### [Remove-AzureRmSqlDatabaseSecondary](Remove-AzureRmSqlDatabaseSecondary.md)
Terminates data replication between a SQL Database and the specified secondary database.

### [Remove-AzureRmSqlDatabaseThreatDetectionPolicy](Remove-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Removes the threat detection policy from a database.

### [Remove-AzureRmSqlElasticPool](Remove-AzureRmSqlElasticPool.md)
Removes an elastic database pool.

### [Remove-AzureRmSqlServer](Remove-AzureRmSqlServer.md)
Removes an Azure SQL Database server.

### [Remove-AzureRmSqlServerActiveDirectoryAdministrator](Remove-AzureRmSqlServerActiveDirectoryAdministrator.md)
Removes an Azure AD administrator for SQL Server.

### [Remove-AzureRmSqlServerAuditing](Remove-AzureRmSqlServerAuditing.md)
Removes the auditing of a SQL server.

### [Remove-AzureRmSqlServerCommunicationLink](Remove-AzureRmSqlServerCommunicationLink.md)
Removes a communication link for elastic database transactions between two servers.

### [Remove-AzureRmSqlServerDisasterRecoveryConfiguration](Remove-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Removes a SQL database server system recovery configuration.

### [Remove-AzureRmSqlServerFirewallRule](Remove-AzureRmSqlServerFirewallRule.md)
Removes a firewall rule from a SQL Database server.

### [Restore-AzureRmSqlDatabase](Restore-AzureRmSqlDatabase.md)
Restores a SQL database.

### [Resume-AzureRmSqlDatabase](Resume-AzureRmSqlDatabase.md)
Resumes a SQL Data Warehouse database.

### [Set-AzureRmSqlDatabase](Set-AzureRmSqlDatabase.md)
Sets properties for a database, or moves an existing database into an elastic pool.

### [Set-AzureRmSqlDatabaseAuditingPolicy](Set-AzureRmSqlDatabaseAuditingPolicy.md)
Sets the auditing policy for a database.

### [Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Sets a server long term retention policy.

### [Set-AzureRmSqlDatabaseDataMaskingPolicy](Set-AzureRmSqlDatabaseDataMaskingPolicy.md)
Sets data masking for a database.

### [Set-AzureRmSqlDatabaseDataMaskingRule](Set-AzureRmSqlDatabaseDataMaskingRule.md)
Sets the properties of a data masking rule for a database.

### [Set-AzureRmSqlDatabaseSecondary](Set-AzureRmSqlDatabaseSecondary.md)
Switches a secondary database to be primary in order to initiate failover.

### [Set-AzureRmSqlDatabaseThreatDetectionPolicy](Set-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Sets a threat detection policy on a database.

### [Set-AzureRmSqlDatabaseTransparentDataEncryption](Set-AzureRmSqlDatabaseTransparentDataEncryption.md)
Modifies TDE property for a database.

### [Set-AzureRmSqlElasticPool](Set-AzureRmSqlElasticPool.md)
Modifies properties of an elastic database pool in a SQL Database.

### [Set-AzureRmSqlServer](Set-AzureRmSqlServer.md)
Modifies properties of a SQL Database server.

### [Set-AzureRmSqlServerActiveDirectoryAdministrator](Set-AzureRmSqlServerActiveDirectoryAdministrator.md)
Provisions an Azure AD administrator for SQL Server.

### [Set-AzureRmSqlServerAuditingPolicy](Set-AzureRmSqlServerAuditingPolicy.md)
Changes the auditing policy of a SQL Database server.

### [Set-AzureRmSqlServerBackupLongTermRetentionVault](Set-AzureRmSqlServerBackupLongTermRetentionVault.md)
Sets a server long term retention vault.

### [Set-AzureRmSqlServerDisasterRecoveryConfiguration](Set-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Modifies a database server recovery configuration.

### [Set-AzureRmSqlServerFirewallRule](Set-AzureRmSqlServerFirewallRule.md)
Modifies a firewall rule in Azure SQL Database server.

### [Start-AzureRmSqlDatabaseExecuteIndexRecommendation](Start-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Starts the workflow that runs a recommended index operation.

### [Start-AzureRmSqlServerUpgrade](Start-AzureRmSqlServerUpgrade.md)
Starts the upgrade of a SQL Database server.

### [Stop-AzureRmSqlDatabaseExecuteIndexRecommendation](Stop-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Stops the workflow that runs a recommended index operation.

### [Stop-AzureRmSqlServerUpgrade](Stop-AzureRmSqlServerUpgrade.md)
Stops the upgrade of a SQL Database server.

### [Suspend-AzureRmSqlDatabase](Suspend-AzureRmSqlDatabase.md)
Suspends a SQL Data Warehouse database.

### [Use-AzureRmSqlServerAuditingPolicy](Use-AzureRmSqlServerAuditingPolicy.md)
Specifies that a database uses the auditing policy of its host server.

